refactor(core): remove unused flow engine, IO, and test modules
- Deleted `DefaultFlowEngineTest`, `FlowDefinitionParser`, `FlowFileLoader`, and related test cases
- Updated main Redis flow store `RedisFlowStore` to streamline TTL handling with improved JSON serialization setup
- Refactored TTL logic to support sliding and absolute cap scenarios without unused classes