@@ -1,7 +1,10 @@
 package com.flowsentinel.store.redis.core;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.fasterxml.jackson.module.paramnames.ParameterNamesModule;
+import com.flowsentinel.core.runtime.FlowState;
 import com.flowsentinel.core.store.FlowMeta;
 import com.flowsentinel.core.store.FlowSnapshot;
 import com.flowsentinel.core.store.FlowStore;
@@ -12,11 +15,10 @@ import org.springframework.dao.DataRetrievalFailureException;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.data.redis.core.script.DefaultRedisScript;
 import org.springframework.data.redis.core.script.RedisScript;
+import org.springframework.lang.NonNull;
 
-import java.io.IOException;
 import java.time.Duration;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -24,25 +26,30 @@ import java.util.Optional;
 /**
  * A Redis-based implementation of the {@link FlowStore} interface.
  * <p>
- * This store persists flow metadata and snapshots in Redis, leveraging its time-to-live (TTL)
+ * This store persists flow metadata and snapshots in Redis, leveraging its Time-To-Live (TTL)
  * capabilities for automatic data expiration. It supports both fixed TTL and sliding expiration
- * policies, as well as an absolute cap on record lifetime.
+ * policies, as well as an absolute cap on record lifetime. The behavior is configured via
+ * {@link com.flowsentinel.store.redis.config.RedisStorageAutoConfiguration}.
  * </p>
  * <p>
  * To ensure atomicity for critical operations like creation and deletion, this implementation
- * uses Lua scripts executed on the Redis server.
+ * uses Lua scripts executed on the Redis server. All values are stored as JSON strings.
  * </p>
  *
  * @author AI Assistant
+ * @see FlowStore
+ * @see com.flowsentinel.store.redis.config.RedisStorageAutoConfiguration
  */
 public class RedisFlowStore implements FlowStore {
 
     private static final Logger log = LoggerFactory.getLogger(RedisFlowStore.class);
 
     private static final ObjectMapper objectMapper = new ObjectMapper()
-            .registerModule(new JavaTimeModule());
+            .registerModule(new JavaTimeModule())
+            .registerModule(new ParameterNamesModule());
 
-    // Use PEXPIRE to support millisecond precision for TTL
+    // Lua script to atomically create a key with an expiration if it does not already exist.
+    // Uses PEXPIRE for millisecond precision.
     private static final RedisScript<Long> CREATE_META_SCRIPT = new DefaultRedisScript<>(
             "local meta_exists = redis.call('SETNX', KEYS[1], ARGV[1]); " +
                     "if meta_exists == 1 then " +
@@ -52,8 +59,9 @@ public class RedisFlowStore implements FlowStore {
             Long.class
     );
 
+    // Lua script to atomically delete multiple keys.
     private static final RedisScript<Long> DELETE_SCRIPT = new DefaultRedisScript<>(
-            "return redis.call('DEL', KEYS[1], KEYS[2], KEYS[3])", Long.class);
+            "return redis.call('DEL', KEYS[1], KEYS[2])", Long.class);
 
     private final StringRedisTemplate template;
     private final RedisKeys redisKeys;
@@ -64,6 +72,7 @@ public class RedisFlowStore implements FlowStore {
 
     /**
      * Constructs a new RedisFlowStore with the specified configuration.
+     * This constructor is typically called by Spring's dependency injection container.
      *
      * @param template       The Spring Redis template for executing commands. Must not be null.
      * @param keyPrefix      The prefix for all keys to ensure namespace isolation. Must not be null.
@@ -74,178 +83,217 @@ public class RedisFlowStore implements FlowStore {
      * @throws NullPointerException if template, keyPrefix, ttl, slidingReset, or absoluteCap are null.
      */
     public RedisFlowStore(StringRedisTemplate template, String keyPrefix, Duration ttl, boolean slidingEnabled, FlowSentinelRedisProperties.SlidingReset slidingReset, Duration absoluteCap) {
-        this.template = Objects.requireNonNull(template, "StringRedisTemplate cannot be null");
-        this.redisKeys = new RedisKeys(Objects.requireNonNull(keyPrefix, "keyPrefix cannot be null"));
-        this.ttl = Objects.requireNonNull(ttl, "ttl cannot be null");
+        this.template = Objects.requireNonNull(template, "StringRedisTemplate cannot be null.");
+        this.redisKeys = new RedisKeys(Objects.requireNonNull(keyPrefix, "Key prefix cannot be null."));
+        this.ttl = Objects.requireNonNull(ttl, "TTL duration cannot be null.");
+        this.slidingReset = Objects.requireNonNull(slidingReset, "Sliding reset policy cannot be null.");
+        this.absoluteCap = Objects.requireNonNull(absoluteCap, "Absolute cap duration cannot be null.");
         this.slidingEnabled = slidingEnabled;
-        this.slidingReset = Objects.requireNonNull(slidingReset, "slidingReset cannot be null");
-        this.absoluteCap = Objects.requireNonNull(absoluteCap, "absoluteCap cannot be null");
     }
 
     /**
-     * Convenience constructor for testing or basic setup where sliding expiration is disabled.
+     * Calculates the effective Time-To-Live (TTL) for a flow's keys, respecting the absolute cap.
+     * If sliding expiration is disabled or the absolute cap is not set, this returns the base TTL.
+     * Otherwise, it calculates the remaining time until the absolute cap and returns the lesser
+     * of that value and the base TTL.
      *
-     * @param template  The Spring Redis template for executing commands. Must not be null.
-     * @param keyPrefix The prefix for all keys to ensure namespace isolation. Must not be null.
-     * @param ttl       The base time-to-live for records. Must not be null.
-     * @throws NullPointerException if template, keyPrefix, or ttl are null.
+     * @param flowId The ID of the flow.
+     * @return The calculated effective TTL as a {@link Duration}.
      */
-    public RedisFlowStore(StringRedisTemplate template, String keyPrefix, Duration ttl) {
-        this(
-                template,
-                keyPrefix,
-                ttl,
-                false, // slidingEnabled
-                FlowSentinelRedisProperties.SlidingReset.ON_READ, // default slidingReset
-                Duration.ZERO // default absoluteCap
-        );
-    }
-
-    /**
-     * Checks if the absolute cap feature is enabled.
-     *
-     * @return true if an absolute cap is configured and positive, false otherwise.
-     */
-    private boolean isCapped() {
-        return !absoluteCap.isZero() && !absoluteCap.isNegative();
-    }
-
-    /**
-     * Determines if the TTL should be reset on a read operation based on the current policy.
-     *
-     * @return true if sliding is enabled and the policy includes ON_READ.
-     */
-    private boolean shouldResetOnRead() {
-        return slidingEnabled && (slidingReset == FlowSentinelRedisProperties.SlidingReset.ON_READ || slidingReset == FlowSentinelRedisProperties.SlidingReset.ON_READ_AND_WRITE);
-    }
-
-    @Override
-    public boolean exists(String flowId) {
-        if (isCapped() && !Boolean.TRUE.equals(template.hasKey(redisKeys.capKey(flowId)))) {
-            return false;
-        }
-        return Boolean.TRUE.equals(template.hasKey(redisKeys.metaKey(flowId)));
-    }
-
-    @Override
-    public Optional<FlowMeta> loadMeta(String flowId) {
-        String metaKey = redisKeys.metaKey(flowId);
-        String capKey = redisKeys.capKey(flowId);
-
-        if (isCapped() && !Boolean.TRUE.equals(template.hasKey(capKey))) {
-            log.debug("Flow {} expired due to absolute TTL cap. Deleting remnant keys.", flowId);
-            delete(flowId);
-            return Optional.empty();
+    private Duration getEffectiveTtl(String flowId) {
+        // If sliding is disabled or no absolute cap is set, just return the base TTL.
+        if (!slidingEnabled || absoluteCap.isZero() || absoluteCap.isNegative()) {
+            return this.ttl;
         }
 
-        String jsonMeta = template.opsForValue().get(metaKey);
-
-        if (jsonMeta == null) {
-            return Optional.empty();
+        // We need the flow's creation time from the meta record.
+        String metaJson = template.opsForValue().get(redisKeys.metaKey(flowId));
+        if (metaJson == null) {
+            log.warn("Cannot calculate effective TTL; FlowMeta for flow ID '{}' not found. Defaulting to base TTL.", flowId);
+            return this.ttl;
         }
 
         try {
-            FlowMeta meta = objectMapper.readValue(jsonMeta, FlowMeta.class);
-            if (shouldResetOnRead()) {
-                template.expire(metaKey, ttl);
+            FlowMeta meta = objectMapper.readValue(metaJson, FlowMeta.class);
+            Instant createdAt = meta.createdAt();
+            Instant now = Instant.now();
+            Instant absoluteExpiryTime = createdAt.plus(absoluteCap);
+
+            if (now.isAfter(absoluteExpiryTime)) {
+                log.debug("Absolute cap reached for flow '{}'. Returning near-instant TTL.", flowId);
+                return Duration.ofMillis(1);
             }
-            return Optional.of(meta);
-        } catch (IOException e) {
-            throw new DataRetrievalFailureException("Failed to load meta for flow: " + flowId + ". Invalid JSON format.", e);
+
+            Duration remainingTime = Duration.between(now, absoluteExpiryTime);
+            // The new TTL is the smaller of the base TTL and the remaining time.
+            Duration effectiveTtl = remainingTime.compareTo(this.ttl) < 0 ? remainingTime : this.ttl;
+
+            // Ensure TTL is positive
+            return (effectiveTtl.isNegative() || effectiveTtl.isZero()) ? Duration.ofMillis(1) : effectiveTtl;
+        } catch (JsonProcessingException e) {
+            log.error("Could not deserialize FlowMeta for flow ID '{}' to calculate effective TTL. Defaulting to base TTL.", flowId, e);
+            return this.ttl;
         }
     }
 
-    @Override
-    public Optional<FlowSnapshot> loadSnapshot(String flowId) {
-        String snapshotKey = redisKeys.snapshotKey(flowId);
-        String capKey = redisKeys.capKey(flowId);
-
-        if (isCapped() && !Boolean.TRUE.equals(template.hasKey(capKey))) {
-            log.debug("Flow {} expired due to absolute TTL cap. Deleting remnant keys.", flowId);
-            delete(flowId);
-            return Optional.empty();
-        }
-
-        String snapshotValue = template.opsForValue().get(snapshotKey);
-
-        if (snapshotValue == null) {
-            return Optional.empty();
-        }
-
-        int firstPipe = snapshotValue.indexOf('|');
-        if (firstPipe == -1) {
-            throw new DataRetrievalFailureException("Failed to load snapshot for flow: " + flowId + ". Invalid format.");
-        }
-        String payload = snapshotValue.substring(0, firstPipe);
-        String contentType = snapshotValue.substring(firstPipe + 1);
-
-        FlowSnapshot snapshot = new FlowSnapshot(flowId, payload, contentType, Instant.now(), Instant.now());
-
-        if (shouldResetOnRead()) {
-            template.expire(snapshotKey, ttl);
-        }
-        return Optional.of(snapshot);
-    }
 
     @Override
-    public void saveMeta(FlowMeta meta) {
-        String metaKey = redisKeys.metaKey(meta.flowId());
+    public void saveMeta(@NonNull FlowMeta meta) {
+        Objects.requireNonNull(meta, "FlowMeta cannot be null.");
+        final String flowId = Objects.requireNonNull(meta.flowId(), "FlowId in FlowMeta cannot be null.");
+        final String metaKey = redisKeys.metaKey(flowId);
+
         try {
-            String jsonMeta = objectMapper.writeValueAsString(meta);
-            template.opsForValue().set(metaKey, jsonMeta, ttl);
-        } catch (IOException e) {
-            throw new IllegalStateException("Failed to serialize FlowMeta to JSON for flow: " + meta.flowId(), e);
-        }
-    }
+            final String json = objectMapper.writeValueAsString(meta);
+            long ttlMillis = ttl.toMillis();
+            if (ttlMillis <= 0) {
+                log.warn("TTL for flow '{}' is non-positive ({}ms). The record might not expire as expected.", flowId, ttlMillis);
+            }
 
-    @Override
-    public void saveSnapshot(FlowSnapshot snapshot) {
-        String flowId = snapshot.flowId();
-        createMetaIfAbsent(flowId);
-
-        String snapshotKey = redisKeys.snapshotKey(flowId);
-        String snapshotValue = snapshot.payload() + "|" + snapshot.contentType();
-        template.opsForValue().set(snapshotKey, snapshotValue, ttl);
-    }
-
-    @Override
-    public void delete(String flowId) {
-        List<String> keys = List.of(
-                redisKeys.metaKey(flowId),
-                redisKeys.snapshotKey(flowId),
-                redisKeys.capKey(flowId)
-        );
-        Long deletedCount = template.execute(DELETE_SCRIPT, keys);
-        log.debug("Deleted {} keys for flowId: {}", deletedCount, flowId);
-    }
-
-    /**
-     * Atomically creates a new {@link FlowMeta} record if one does not already exist.
-     * If capping is enabled, it also creates a separate "cap" key with the absolute TTL.
-     *
-     * @param flowId The ID of the flow for which to create metadata.
-     */
-    private void createMetaIfAbsent(String flowId) {
-        String metaKey = redisKeys.metaKey(flowId);
-        try {
-            FlowMeta newMeta = FlowMeta.createNew(flowId);
-            String jsonMeta = objectMapper.writeValueAsString(newMeta);
-
-            List<String> keys = Collections.singletonList(metaKey);
-            // Pass TTL in milliseconds to the PEXPIRE script
-            Long result = template.execute(CREATE_META_SCRIPT, keys, jsonMeta, String.valueOf(ttl.toMillis()));
-
-            if (result != null && result == 1L) {
-                log.debug("Atomically created new meta for flowId: {}", flowId);
-                if (isCapped()) {
-                    template.opsForValue().set(redisKeys.capKey(flowId), "1", absoluteCap);
-                    log.debug("Set absolute TTL cap of {} for flowId: {}", absoluteCap, flowId);
-                }
+            Long result = template.execute(CREATE_META_SCRIPT, List.of(metaKey), json, String.valueOf(ttlMillis));
+            if (result != null && result == 1) {
+                log.debug("Atomically created and set TTL for meta key: {}", metaKey);
             } else {
-                log.debug("Meta already existed for flowId: {}", flowId);
+                log.debug("Meta key already exists, did not overwrite: {}", metaKey);
             }
-        } catch (IOException e) {
-            throw new IllegalStateException("Failed to create initial meta due to JSON serialization issue for flow: " + flowId, e);
+        } catch (JsonProcessingException e) {
+            log.error("Failed to serialize FlowMeta for flow ID: {}", flowId, e);
+            throw new IllegalStateException("Failed to serialize FlowMeta for flow: " + flowId, e);
         }
+    }
+
+
+    @Override
+    public Optional<FlowMeta> loadMeta(@NonNull String flowId) {
+        if (flowId.isBlank()) {
+            throw new IllegalArgumentException("flowId cannot be blank.");
+        }
+        final String metaKey = redisKeys.metaKey(flowId);
+        String json = template.opsForValue().get(metaKey);
+
+        if (json == null) {
+            return Optional.empty();
+        }
+
+        // Apply sliding expiration if configured on read.
+        if (slidingEnabled && (slidingReset == FlowSentinelRedisProperties.SlidingReset.ON_READ || slidingReset == FlowSentinelRedisProperties.SlidingReset.ON_READ_AND_WRITE)) {
+            Duration effectiveTtl = getEffectiveTtl(flowId);
+            log.trace("Applying sliding expiration on read for meta key: {}. New TTL: {}", metaKey, effectiveTtl);
+            template.expire(metaKey, effectiveTtl);
+        }
+
+        try {
+            return Optional.of(objectMapper.readValue(json, FlowMeta.class));
+        } catch (JsonProcessingException e) {
+            log.error("Failed to deserialize FlowMeta for key: {}. Corrupted data: {}", metaKey, json, e);
+            throw new DataRetrievalFailureException("Failed to deserialize FlowMeta for flow: " + flowId, e);
+        }
+    }
+
+
+    @Override
+    public void saveSnapshot(@NonNull FlowSnapshot snapshot) {
+        Objects.requireNonNull(snapshot, "FlowSnapshot cannot be null.");
+        final String flowId = Objects.requireNonNull(snapshot.flowId(), "FlowId in FlowSnapshot cannot be null.");
+        final String snapshotKey = redisKeys.snapshotKey(flowId);
+        final String metaKey = redisKeys.metaKey(flowId);
+
+        try {
+            String json = objectMapper.writeValueAsString(snapshot);
+            Duration effectiveTtl = getEffectiveTtl(flowId);
+
+            // Set the snapshot value with the calculated TTL.
+            template.opsForValue().set(snapshotKey, json, effectiveTtl);
+
+            // If sliding on writing is enabled, also refresh the meta key's TTL.
+            if (slidingEnabled && (slidingReset == FlowSentinelRedisProperties.SlidingReset.ON_WRITE || slidingReset == FlowSentinelRedisProperties.SlidingReset.ON_READ_AND_WRITE)) {
+                log.trace("Applying sliding expiration on write for meta key: {}. New TTL: {}", metaKey, effectiveTtl);
+                template.expire(metaKey, effectiveTtl);
+            }
+        } catch (JsonProcessingException e) {
+            log.error("Failed to serialize FlowSnapshot for flow ID: {}", flowId, e);
+            throw new IllegalStateException("Failed to serialize FlowSnapshot for flow: " + flowId, e);
+        }
+    }
+
+
+    @Override
+    public Optional<FlowSnapshot> loadSnapshot(@NonNull String flowId) {
+        if (flowId.isBlank()) {
+            throw new IllegalArgumentException("flowId cannot be blank.");
+        }
+        final String snapshotKey = redisKeys.snapshotKey(flowId);
+        String json = template.opsForValue().get(snapshotKey);
+
+        if (json == null) {
+            return Optional.empty();
+        }
+
+        // On snapshot read, extend the TTL of both the snapshot and its meta-key to keep the whole flow alive.
+        if (slidingEnabled && (slidingReset == FlowSentinelRedisProperties.SlidingReset.ON_READ || slidingReset == FlowSentinelRedisProperties.SlidingReset.ON_READ_AND_WRITE)) {
+            Duration effectiveTtl = getEffectiveTtl(flowId);
+            final String metaKey = redisKeys.metaKey(flowId);
+
+            log.trace("Applying sliding expiration on read for snapshot key: {}. New TTL: {}", snapshotKey, effectiveTtl);
+            template.expire(snapshotKey, effectiveTtl);
+
+            log.trace("Applying sliding expiration on read for meta key: {}. New TTL: {}", metaKey, effectiveTtl);
+            template.expire(metaKey, effectiveTtl);
+        }
+
+        try {
+            return Optional.of(objectMapper.readValue(json, FlowSnapshot.class));
+        } catch (JsonProcessingException e) {
+            log.error("Failed to deserialize FlowSnapshot for key: {}. Corrupted data: {}", snapshotKey, json, e);
+            throw new DataRetrievalFailureException("Failed to deserialize FlowSnapshot for flow: " + flowId, e);
+        }
+    }
+
+
+    @Override
+    public Optional<FlowState> find(@NonNull String flowId) {
+        if (flowId.isBlank()) {
+            throw new IllegalArgumentException("flowId cannot be blank.");
+        }
+
+        // Use loadSnapshot to centralize logic for retrieval and sliding expiration
+        return loadSnapshot(flowId).flatMap(snapshot -> {
+            try {
+                // Convert the FlowSnapshot object directly into a FlowState object.
+                // This assumes that the fields in FlowSnapshot (currentStep, isCompleted, attributes)
+                // can be mapped by Jackson to create a FlowState instance.
+                // Note: The 'definition' field in the resulting FlowState will likely be null
+                // as it's not part of the snapshot, which might require handling in the business logic layer.
+                FlowState state = objectMapper.convertValue(snapshot, FlowState.class);
+                return Optional.of(state);
+            } catch (IllegalArgumentException e) {
+                log.error("Failed to convert FlowSnapshot to FlowState for flow ID: {}", flowId, e);
+                throw new DataRetrievalFailureException("Failed to convert FlowSnapshot to FlowState for flow: " + flowId, e);
+            }
+        });
+    }
+
+
+    @Override
+    public void delete(@NonNull String flowId) {
+        if (flowId.isBlank()) {
+            throw new IllegalArgumentException("flowId cannot be blank.");
+        }
+        final String metaKey = redisKeys.metaKey(flowId);
+        final String snapshotKey = redisKeys.snapshotKey(flowId);
+
+        Long deletedCount = template.execute(DELETE_SCRIPT, List.of(metaKey, snapshotKey));
+        log.debug("Attempted to delete keys for flow ID '{}'. Keys deleted: {}", flowId, deletedCount);
+    }
+
+
+    @Override
+    public boolean exists(@NonNull String flowId) {
+        if (flowId.isBlank()) {
+            throw new IllegalArgumentException("flowId cannot be blank.");
+        }
+        final String metaKey = redisKeys.metaKey(flowId);
+        Boolean hasKey = template.hasKey(metaKey);
+        return Boolean.TRUE.equals(hasKey);
     }
 }
